--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,3 +19,84 @@
   align-items: center;
   border: 2px solid white;
 }
+
+.con {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  gap: 30px;
+}
+
+.box1,
+.box2 {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  padding: 20px;
+  border: 2px white solid;
+}
+
+.login-con {
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+}
+
+.names {
+  display: flex;
+  gap: 20px;
+}
+
+.col1,
+.col2 {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 30px;
+  border: 2px solid white;
+}
+
+.col1 form,
+.col2 form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+
+.product-con {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+}
+
+
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.create-con {
+  border: 2px solid white;
+  display: flex;
+  justify-content: center;
+}
+
+.create-con form {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 20px;
+  padding: 20px;
+  border: 2px solid white;
+}
