--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,6 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -10,6 +9,8 @@
   justify-content: center;
   align-items: center;
   gap: 50px;
+  height: 80px;
+  background-color: grey;
 }
 
 .product {
@@ -18,6 +19,8 @@
   justify-content: center;
   align-items: center;
   border: 2px solid white;
+  padding: 20px;
+  margin: 20px;
 }
 
 .con {
