--- a/client/src/App.css
+++ b/client/src/App.css
@@ -355,9 +355,6 @@ button {
   width: 400px;
 }
 
-.product-con button {
-  width: 200px;
-}
 
 .line {
   display: flex;
@@ -461,6 +458,7 @@ button {
   border: 2px solid rgb(49, 49, 49);
   border-radius: 5px;
   padding: 5px;
+  width: 200px;
 }
 
 .buy-btn:hover {
@@ -566,4 +564,102 @@ button {
   margin: 0px 5px 10px 5px;
   width: 185px;
   height: fit-content;
+}
+
+
+
+/* Carousel */
+
+.carousel {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  max-width: 400px;
+  /* Optional max width */
+  margin: 0;
+}
+
+/* Slides wrapper */
+.carousel-inner {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+}
+
+/* Each slide */
+.carousel-item {
+  flex: 0 0 100%;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* Show active slide */
+.carousel-item.active {
+  position: relative;
+  opacity: 1;
+}
+
+/* Image styling */
+.carousel-item img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+/* Navigation arrows */
+.carousel-control-prev,
+.carousel-control-next {
+  position: absolute;
+  top: 50%;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  transform: translateY(-50%);
+  background: rgba(0, 0, 0, 0.2);
+  color: rgb(255, 255, 255, .5);
+  border: none;
+  font-size: 2rem;
+  padding: 0;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.carousel-control-prev:hover,
+.carousel-control-next:hover {
+  background: rgba(0, 0, 0, 0.4);
+  color: white;
+}
+
+.carousel-control-prev {
+  left: 10px;
+}
+
+.carousel-control-next {
+  right: 10px;
+}
+
+/* Indicators */
+.carousel-indicators {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  padding: 0;
+  list-style: none;
+}
+
+.carousel-indicators li {
+  width: 10px;
+  height: 10px;
+  background-color: #999;
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.carousel-indicators .active {
+  background-color: #333;
 }
